--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@ body{
     margin:0;
     padding:0;
     box-sizing: border-box;
-    color:var(--white);
     background-color: var(--Light-grey);
     height:100vh;
     
@@ -27,18 +26,20 @@ body{
     margin:5px;     
 }
 /* utility */
-small{
+
+.card-text{
+    margin-top:30px;
     /* text-align:center; */
-    letter-spacing:  .5px;
     font-size:20px;
-    font-weight:thin;
+    letter-spacing:.5px;
+    line-height: 1.5;
+    /* font-weight:thin; */
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.card-text{
-    margin-top:50px;
-    
+.text-color{
+    color: #fff;
 }
 .name{
     margin-top:15px;    
@@ -55,7 +56,7 @@ small{
 
 /* flex */
 .flex{
-    display:flex;
+   display:flex;
    gap: var(--gap, 1rem);
 }
 
@@ -66,26 +67,21 @@ small{
     /* margin-top:20px; */
     border-radius:8px;
     padding:20px;
-  margin: 2px 10px 18px 10px ;
-  grid-gap:20px;
+    margin: 2px 10px 18px 10px ;
+    grid-gap:30px;
 }
 .img{
     border-radius:50%;
     border:5px solid var(--violet)
 }
-.feedback{
-    color:var(--blakish-blue);
-    font-size: 25px;
-    font-weight: 540;
-}
+
 
 .card-1{
- background-color: var(--violet);
- grid-area: a;
+    background-color: var(--violet);
+    grid-area: a;
 }
 
 .card-2{
-    
     background-color: var(--dark-blue);
     grid-area: b;
 }
@@ -93,25 +89,21 @@ small{
 .card-3{
     grid-area: c;
     background-color: var(--white);
-    
 }
 
 .card-4{
     grid-area: e;
     background-color: var(--blakish-blue);
-    
 }
 
 .card-5{
     grid-area: d;
-    background-color: var(--white);
-   
-    
+    background-color: var(--white);    
 }
-.card-3  small,
-.card-5  small
+.card-3  p,
+.card-5  p
 {
-    
+   
     color:var(--dark-blue);
 }
 .card-3  h4,
@@ -124,6 +116,11 @@ small{
 {
     color:var(--dark-blue);
 }
+.feedback{
+   color:var(--blakish-blue)!important;
+   font-size: 25px;
+   font-weight: 540;
+}
 
 /* Footer Section */
 .attribution { 
@@ -135,7 +132,6 @@ small{
     text-decoration: none;
     color: hsl(228, 45%, 44%);
  }
-
 
 @media screen and (min-width:900px){
     .section-head{
