--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body{
 .card-text{
     margin-top:30px;
     /* text-align:center; */
-    font-size:20px;
+    /* font-size:20px; */
     letter-spacing:.5px;
     line-height: 1.5;
     /* font-weight:thin; */
